--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "heroku": "^7.47.7",
     "mongodb": "^3.6.3",
     "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0",
+    "node-notifier": "^9.0.0",
     "nodemon": "^2.0.7"
   }
 }
