--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-notifier": "^9.0.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "urijs": "^1.19.6"
   }
 }
