--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "styles": "bash styles.sh"
   },
   "eslintConfig": {
     "extends": [
