--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku": "^7.47.7",
