--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "node-forge": "^0.10.0",
     "node-notifier": "^9.0.0",
     "nodemon": "^2.0.7",
-    "urijs": "^1.19.6"
+    "urijs": "^1.19.6",
+    "xmldom": "^0.5.0"
   }
 }
