--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "scheduler": "node src/scheduler.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "node-forge": "^0.10.0",
     "node-notifier": "^9.0.0",
     "nodemon": "^2.0.7",
-    "urijs": "^1.19.6"
+    "urijs": "^1.19.6",
+    "xmldom": "^0.5.0"
   }
 }
