--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "scheduler": "node src/scheduler.js"
   },
   "keywords": [],
   "author": "",
