--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,14 +3,14 @@
    "version": 2,
    "builds": [
       {
-         "src": "index.js",
-         "use": "@now/node-server"
+         "src": "./src/index.js",
+         "use": "@vercel/node"
       }
    ],
    "routes": [
       {
-         "src": "/.*",
-         "dest": "index.js"
+         "src": "/(.*)",
+         "dest": "/src"
       }
    ],
    "env": {
