--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
   "author": "DucktorDanny",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.5",
+    "node-fetch": "^2.6.1",
+    "mongodb": "^3.6.3",
     "cors": "^2.8.5",
     "discord.js": "^12.5.1",
+    "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "heroku": "^7.2.0",
-    "mongodb": "^3.6.3",
-    "node-fetch": "^2.6.1",
-    "node-forge": "^0.10.0",
-    "node-notifier": "^9.0.0",
-    "nodemon": "^2.0.7",
-    "urijs": "^1.19.6",
-    "ws": "^6.2.1",
-    "xmldom": "^0.5.0"
+    "nodemon": "^2.0.7"
   }
 }
