--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,15 @@
   "author": "DucktorDanny",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.6.1",
-    "mongodb": "^3.6.3",
+    "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "discord.js": "^12.5.1",
-    "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "heroku": "^7.2.0",
     "nodemon": "^2.0.7"
   }
 }
